--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@web3auth/base": "^0.7.0",
     "@web3auth/core": "^0.7.0",
+    "@web3auth/metamask-adapter": "^0.7.0",
     "@web3auth/openlogin-adapter": "^0.7.0",
     "@web3auth/ui": "^0.7.0",
     "@web3auth/web3auth": "^0.7.0",
@@ -19,9 +23,11 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^7.2.8",
     "react-scripts": "4.0.3",
     "react-sweet-progress": "^1.1.2",
     "react-toastify": "^8.2.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
   },
