--- a/contract/package.json
+++ b/contract/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "lomads",
+  "name": "lomads-contract",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
   },
@@ -34,6 +33,16 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.50.1"
-  }
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.4",
+    "hardhat": "^2.9.3"
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
