--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,31 @@
 {
-  "name": "lomads",
+  "name": "lomads-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "@web3auth/base": "^0.7.0",
+    "@web3auth/core": "^0.7.0",
+    "@web3auth/metamask-adapter": "^0.7.0",
+    "@web3auth/openlogin-adapter": "^0.7.0",
+    "@web3auth/ui": "^0.7.0",
+    "@web3auth/web3auth": "^0.7.0",
     "bootstrap": "^5.1.3",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^7.2.8",
+    "react-scripts": "4.0.3",
+    "react-sweet-progress": "^1.1.2",
+    "react-toastify": "^8.2.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
   },
