--- a/contract/package.json
+++ b/contract/package.json
@@ -1,11 +1,12 @@
 {
   "name": "lomads-contract",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
   },
