--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lomads-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -18,10 +18,12 @@
     "@web3auth/ui": "^0.7.0",
     "@web3auth/web3auth": "^0.7.0",
     "bootstrap": "^5.1.3",
-    "react": "^18.0.0",
+    "moralis": "^1.7.0",
+    "react": "^16.9.0",
     "react-bootstrap": "^2.2.3",
-    "react-dom": "^18.0.0",
+    "react-dom": "^16.9.0",
     "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.5",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
@@ -33,10 +35,10 @@
     "web3": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "react-app-rewired": "^2.2.1",
     "sass": "^1.50.1"
   }
 }
