torus wallet + moralis metamask

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 /contract/package-lock.json
 /frontend/package-lock.json
 
+/yarn.lock
+/contract/yarn.lock
+/frontend/yarn.lock
+
 # testing
 /coverage
 
