--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
-    "@onramper/widget": "^2.2.12",
+    "@onramper/moonpay-adapter": "^1.6.17",
+    "@onramper/widget": "^2.2.16",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
@@ -15,6 +16,7 @@
     "@web3auth/core": "^0.7.0",
     "@web3auth/metamask-adapter": "^0.7.0",
     "@web3auth/openlogin-adapter": "^0.7.0",
+    "@web3auth/torus-wallet-connector-plugin": "^1.0.0",
     "@web3auth/ui": "^0.7.0",
     "@web3auth/web3auth": "^0.7.0",
     "bootstrap": "^5.1.3",
